raffia/tests/error/scss/selectors/empty-placeholder.snap
---
source: raffia/tests/error.rs
---
error: expect one of `<ident>` or `#{`, but found `{`
  ┌─ empty-placeholder.scss:1:3
  │
1 │ % {
  │   ^


